<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="antrix.chopbet.Activities.activityAddFunds">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/userNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ChopBet Wallet"
        android:layout_marginTop="5dp"
        android:textStyle="italic"
        android:gravity="center"
        android:textSize="13sp"
        android:textColor="@color/selector" />



    <EditText
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="number"
        android:hint="@string/ghs_0_00"
        android:maxLength="3"
        android:textColorHint="@color/divider"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ghs_500_00_max"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/selector"
        />


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/btnNext"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lb_resetAfterFailed="true"
            app:lb_btnRippleColor="#000000"
            app:lb_btnText="NEXT"
            app:lb_btnColor="@color/green"
            />

    </RelativeLayout>


</LinearLayout>
