<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/actionLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp">


        <Button
            android:layout_margin="5dp"
            android:background="@mipmap/ic_finish"
            android:id="@+id/acceptButton"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            style="@style/redButton"
            />


        <Button
            android:layout_margin="5dp"
            android:background="@mipmap/ic_cancel"
            android:id="@+id/cancelButton"
            android:visibility="visible"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:textSize="14sp"
            android:layout_alignParentStart="true"
            style="@style/redButton"
            />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/nameCard"
        app:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_profile"
                app:civ_fill_color="@color/colorAccent"
                android:layout_marginStart="15dp"
                android:layout_margin="20dp"
                app:civ_border_color="#EEE"
                app:elevation="5dp"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/changeProfilePicture"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="10sp"
                android:layout_marginStart="23dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:text="@string/change_picture"/>

            <TextView
                android:id="@+id/name"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"/>


            <EditText
                android:hint="@string/name"
                android:id="@+id/nameTextView"
                android:layout_toEndOf="@+id/profileImage"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/name"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="textPersonName"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/selector"
        android:layout_below="@+id/nameCard"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_marginBottom="0.5dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/psnHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/psn"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:hint="@string/psn1"
                    android:id="@+id/psnTextView"
                    android:layout_toEndOf="@+id/psnHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginBottom="0.5dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/xboxLiveHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xbox_live_1"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:hint="@string/xbox_live"
                    android:id="@+id/xboxLiveTextView"
                    android:layout_toEndOf="@+id/xboxLiveHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_marginBottom="0.5dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/originHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/origin"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:hint="Origin"
                    android:id="@+id/originTextView"
                    android:layout_toEndOf="@+id/originHeader"
                    android:layout_marginStart="20dp"
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>





        </LinearLayout>


    </android.support.v7.widget.CardView>











</LinearLayout>