<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="antrix.chopbet.Activities.activityAddFunds">


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/newCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/flag_ghana"
            app:civ_border_color="#EEE"
            app:civ_border_width="2dp"
            app:civ_fill_color="@color/colorAccent" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/profileImage"
            android:hint="Phone Number">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:maxLength="10"
                android:maxLines="1"
                android:textSize="16sp" />


        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/saveCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_toEndOf="@+id/profileImage"
            android:text="Save details for future transactions"
            android:textSize="12sp" />


    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:paddingTop="10dp"
        android:id="@+id/oldCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profileImage1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/flag_ghana"
                app:civ_border_color="#EEE"
                app:civ_border_width="2dp"
                app:civ_fill_color="@color/colorAccent" />

            <TextView
                android:textSize="14sp"
                android:id="@+id/phoneNumberTextView"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/profileImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>







    </RelativeLayout>



    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="right"
                android:textSize="13sp"
                android:textStyle="italic"
                android:textColor="@color/selector" />



            <TextView
                android:layout_toEndOf="@+id/userNameTextView"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-   ChopBet Wallet"
                android:textStyle="italic"
                android:textSize="13sp"
                android:textColor="@color/selector" />

        </RelativeLayout>


    </RelativeLayout>




    <EditText
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:inputType="number"
        android:hint="@string/ghs_0_00"
        android:maxLength="3"
        android:textColorHint="@color/divider"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_amount"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ghs_500_00_max"
        android:gravity="center"
        android:textSize="12sp"
        android:textColor="@color/selector"
        />


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <com.dx.dxloadingbutton.lib.LoadingButton
            android:id="@+id/btnNext"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lb_resetAfterFailed="true"
            app:lb_btnRippleColor="#000000"
            app:lb_btnText="NEXT"
            app:lb_btnColor="@color/green"
            />

    </RelativeLayout>


</LinearLayout>
