<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <android.support.v7.widget.CardView
                android:id="@+id/nameCard"
                app:elevation="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profileImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_profile"
                        app:civ_fill_color="@color/colorAccent"
                        android:layout_marginStart="15dp"
                        android:layout_margin="20dp"
                        app:civ_border_color="#EEE"
                        app:elevation="5dp"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:visibility="visible"
                        android:id="@+id/sendBet"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Start Bet"
                        android:layout_margin="10dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"/>




                    <TextView
                        android:id="@+id/name"
                        android:maxLines="1"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/profileImage" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/editProfileTextView"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_profile"/>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/selector"
                android:layout_below="@+id/nameCard"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/psnLayout"
                        android:layout_marginBottom="0.5dp"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView

                            android:id="@+id/psnHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/psn"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/psnTextView"
                            android:layout_toEndOf="@+id/psnHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_marginEnd="20dp"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/black"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/xboxLiveLayout"
                        android:layout_marginBottom="0.5dp"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/xboxLiveHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/xbox_live_1"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/xboxLiveTextView"
                            android:layout_toEndOf="@+id/xboxLiveHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_marginEnd="20dp"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/black"
                            />

                    </RelativeLayout>


                    <RelativeLayout
                        android:visibility="gone"
                        android:id="@+id/originLayout"
                        android:layout_marginBottom="0.5dp"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">

                        <TextView
                            android:id="@+id/originHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/origin"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/originTextView"
                            android:layout_toEndOf="@+id/originHeader"
                            android:layout_marginStart="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_marginEnd="20dp"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textColor="@color/black"
                            />

                    </RelativeLayout>




                    <LinearLayout
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.v7.widget.CardView
                                android:layout_marginStart="10dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginEnd="5dp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="100dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/winsTextView"
                                        android:layout_centerInParent="true"
                                        android:textSize="30sp"
                                        android:text=""
                                        android:textColor="@color/green"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />

                                    <TextView
                                        android:layout_centerHorizontal="true"
                                        android:layout_below="@+id/winsTextView"
                                        android:textSize="13sp"
                                        android:text="WINS"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />

                                </RelativeLayout>


                            </android.support.v7.widget.CardView>



                            <android.support.v7.widget.CardView
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="100dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/lossesTextView"
                                        android:layout_centerInParent="true"
                                        android:textSize="30sp"
                                        android:text=""
                                        android:textColor="@color/colorPrimary"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />

                                    <TextView
                                        android:layout_centerHorizontal="true"
                                        android:layout_below="@+id/lossesTextView"
                                        android:textSize="13sp"
                                        android:text="LOSSES"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content" />

                                </RelativeLayout>

                            </android.support.v7.widget.CardView>


                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">


                            <antrix.chopbet.BetClasses.NestedListView
                                android:id="@+id/list_History"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:divider="@android:color/transparent"
                                android:dividerHeight="0dp"
                                android:layout_weight="1"
                                android:scrollbarSize="0dp"
                                android:scrollbars="none"
                                />

                        </LinearLayout>






                    </LinearLayout>






                </LinearLayout>


            </android.support.v7.widget.CardView>





        </RelativeLayout>

    </LinearLayout>









</ScrollView>